--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.7.0-alpha",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0-alpha",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
